--- a/tools/cfgs/stage1_polarmix/centerpoint_20_waymo_1_nus_frames_polarmix_rc1_pp03_deg90.yaml
+++ b/tools/cfgs/stage1_polarmix/centerpoint_20_waymo_1_nus_frames_polarmix_rc1_pp03_deg90.yaml
@@ -76,8 +76,9 @@ DATA_CONFIG:
     DATASET_NAME: 'WaymoNusPolarMixDataset'
     CLASS_NAMES: ['car']
     MIX_TYPE: polarmix
-    POLARMIX_PROB: 1.0
-    POLARMIX_RC_NUM: 0
+    POLARMIX_PROB: 0.3
+    POLARMIX_RC_NUM: 1
+    POLARMIX_DEGREE: 1.570796
     POINT_CLOUD_RANGE: [-54.0, -54.0, -5.0, 54.0, 54.0, 4.8]
 
     DATA_SPLIT: {
