[add] distance random component

--- a/tools/cfgs/stage1_polarmix/centerpoint_20_waymo_1_nus_frames_polarmix_rc1_pp01_deg90_3_dis_rand.yaml
+++ b/tools/cfgs/stage1_polarmix/centerpoint_20_waymo_1_nus_frames_polarmix_rc1_pp01_deg90_3_dis_rand.yaml
@@ -79,7 +79,7 @@ DATA_CONFIG:
     POLARMIX_PROB: 0.1
     POLARMIX_RC_NUM: 1
     POLARMIX_DEGREE: 1.570796
-    POLARMIX_DIS: FULL
+    POLARMIX_DIS: RAND
     POLARMIX_UPDATE_METHOD: [FIX, FIX, FIX]
     POINT_CLOUD_RANGE: [-54.0, -54.0, -5.0, 54.0, 54.0, 4.8]
 
@@ -143,7 +143,7 @@ DATA_CONFIG:
                   }
 
                   SAMPLE_GROUPS: [
-                    'car:2'
+                    'car:10'
                   ]
 
                   NUM_POINT_FEATURES: 5
