--- a/tools/cfgs/stage1_polarmix/centerpoint_20_waymo_1_nus_frames_polarmix_rc1_pp01_deg90_3_cornerdel.yaml
+++ b/tools/cfgs/stage1_polarmix/centerpoint_20_waymo_1_nus_frames_polarmix_rc1_pp01_deg90_3_cornerdel.yaml
@@ -76,7 +76,7 @@ DATA_CONFIG:
     DATASET_NAME: 'WaymoNusPolarMixDataset'
     CLASS_NAMES: ['car']
     MIX_TYPE: polarmix
-    MIX_INC_METHOD: center
+    MIX_INC_METHOD: corner_del
     POLARMIX_PROB: 0.1
     POLARMIX_RC_NUM: 1
     POLARMIX_DEGREE: 1.570796
