--- a/tools/cfgs/stage1_polarmix/centerpoint_20_waymo_1_nus_frames_polarmix_rc1_pp00_deg90_3_cornerdel_nogt_16.yaml
+++ b/tools/cfgs/stage1_polarmix/centerpoint_20_waymo_1_nus_frames_polarmix_rc1_pp00_deg90_3_cornerdel_nogt_16.yaml
@@ -76,8 +76,12 @@ DATA_CONFIG:
     DATASET_NAME: 'WaymoNusPolarMixDataset'
     CLASS_NAMES: ['car']
     MIX_TYPE: polarmix
-    POLARMIX_PROB: 0.2
+    MIX_INC_METHOD: corner_del
+    POLARMIX_PROB: 0.0
     POLARMIX_RC_NUM: 1
+    POLARMIX_DEGREE: 1.570796
+    POLARMIX_DIS: FULL
+    POLARMIX_UPDATE_METHOD: [FIX, FIX, FIX]
     POINT_CLOUD_RANGE: [-54.0, -54.0, -5.0, 54.0, 54.0, 4.8]
 
     DATA_SPLIT: {
