--- a/tools/cfgs/stage1_polarmix/centerpoint_20_waymo_1_nus_frames_polarmix_rc1_pp02_nogt_16.yaml
+++ b/tools/cfgs/stage1_polarmix/centerpoint_20_waymo_1_nus_frames_polarmix_rc1_pp02_nogt_16.yaml
@@ -159,6 +159,7 @@ DATA_CONFIG:
 
     WaymoDataset:
         _BASE_CONFIG_: cfgs/dataset_configs/waymo_dataset.yaml
+        OTHER_CHANNEL: modes/16^
         CLASS_NAMES: ['Vehicle']
         SAMPLED_INTERVAL: {
             'train': 5,
