--- a/tools/cfgs/stage1_polarmix/centerpoint_20_waymo_05_nus_frames_polarmix_rc1_pp00_deg90_3_cornerdel_nogt_16.yaml
+++ b/tools/cfgs/stage1_polarmix/centerpoint_20_waymo_05_nus_frames_polarmix_rc1_pp00_deg90_3_cornerdel_nogt_16.yaml
@@ -76,8 +76,12 @@ DATA_CONFIG:
     DATASET_NAME: 'WaymoNusPolarMixDataset'
     CLASS_NAMES: ['car']
     MIX_TYPE: polarmix
-    POLARMIX_PROB: 0.2
+    MIX_INC_METHOD: corner_del
+    POLARMIX_PROB: 0.0
     POLARMIX_RC_NUM: 1
+    POLARMIX_DEGREE: 1.570796
+    POLARMIX_DIS: FULL
+    POLARMIX_UPDATE_METHOD: [FIX, FIX, FIX]
     POINT_CLOUD_RANGE: [-54.0, -54.0, -5.0, 54.0, 54.0, 4.8]
 
     DATA_SPLIT: {
@@ -121,7 +125,7 @@ DATA_CONFIG:
         CLASS_NAMES: ['car']
 
         INFO_PATH: {
-            'train': [top_1_percent_frames_nuscenes_infos_10sweeps_train.pkl],
+            'train': [top_0.5_percent_frames_nuscenes_infos_10sweeps_train.pkl],
             'test': [nuscenes_infos_10sweeps_val.pkl],
         }
 
@@ -132,7 +136,7 @@ DATA_CONFIG:
                   SHIFT_COOR: [0.0, 0.0, 1.8]
                   DB_INFO_PATH:
                     # - nuscenes_dbinfos_10sweeps_withvelo.pkl
-                    - top_1_percent_frames_nuscenes_dbinfos_10sweeps_withvelo.pkl
+                    - top_0.5_percent_frames_nuscenes_dbinfos_10sweeps_withvelo.pkl
                   PREPARE: {
                     filter_by_min_points: [
                         'car:5'
